--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is a Website for the fictional campsites review site Nucamp",
   "main": "index.html",
   "scripts": {
-    "lite":"lite-server",
-    "start":"npm run lite",
+    "lite": "lite-server",
+    "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ryan Pellak",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "popper.js": "^1.15.0"
   }
 }
